Kubernetes/First task/deploy-kuber-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-kuber
  # namespace: first-task 
  labels:
    app: deploy-kuber
spec:
  replicas: 3
  selector:
    matchLabels:
      app: exp
  template:
    metadata:
      labels:
        app: exp
    spec:
      containers:
      - name: exp-deploy
        image: crccheck/hello-world
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80

...
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: my-autoscaling
  spec:
    scaleTargetRef:
      apiVersion: apps/v1
      kind: Deployment
      name: my-deploy-autoscaling
    minReplicas: 3
    maxReplicas: 5
    metrics:
    - type: Resources
      resources:
        name: cpu
        targetAverangeUtilization: 70
    - type: Resources
      resources:
        name: memory
        targetAverangeUtilization: 80
