Kubernetes/First task/ingress-kuber.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kuber
  labels:
    name: myingress
spec:
  rules:
  - host: www.elisey.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deploy-kuber
            port: 
              number: 80
